[gd_scene load_steps=2 format=2]

[ext_resource path="res://FlyingBookSpawner/FlyingBookSpawner.gd" type="Script" id=1]

[node name="FlyingBookSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="CycleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StartDelayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="CycleTimer" to="." method="_on_CycleTimer_timeout"]
[connection signal="timeout" from="StartDelayTimer" to="." method="_on_StartDelayTimer_timeout"]
